--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -7,8 +7,8 @@
 			<th>ID</th>
 			<th></th>
 			<th>Attend</th>
-			<th>Spoken</th>
-			<th>Status</th>
+			<th class="rotate">Spoken</th>
+			<th class="rotate">Status</th>
 			<% psets.each do |pset| %>
 			<th class="rotate"><div><%= pset.name %></div></th>
 			<% end %>
@@ -30,6 +30,7 @@
 				</form>
 			</th>
 			<% end %>
+			<th>Group</th>
 			<th class="rotate"></th>
 		</tr>
 
@@ -59,6 +60,8 @@
 				<%= grade_button(user, pset, subs)%>
 			</td>
 			<% end %>
+
+			<td><%= user.group.name %></td>
 
 			<td>
 				<div class="pull-right">
