don't show admins

--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -61,7 +61,7 @@
 			</td>
 			<% end %>
 
-			<td><%= user.group.name %></td>
+			<td><%= user.group.name if user.group %></td>
 
 			<td>
 				<div class="pull-right">
