--- a/app/views/layouts/_ama.html.erb
+++ b/app/views/layouts/_ama.html.erb
@@ -1,5 +1,10 @@
 <% if Settings.hands_allow %>
-<li role="presentation" class="dropdown-header" style="padding:5px 10px 0 12px;"><%= @assist_available %> staff are currently available.</li>
+<li role="presentation" class="dropdown-header" style="padding:5px 10px 0 12px;"><%= @assist_available.length %> staff are currently available.</li>
+<li role="presentation" style="margin-top:2px; background-color:#F8F8F8; display:flex;">
+<% @assist_available.each do |assist| %>
+<img src="<%= assist.avatar %>" style="max-width:70px;" data-toggle="tooltip" data-placement="bottom" title="<%= assist.name.split[0] %>">
+<% end %>
+</li>
 <% else %>
 <li role="presentation" class="dropdown-header" style="padding:5px 10px 0 12px;">Ask us anything.</li>
 <% end %>
@@ -14,3 +19,9 @@
         <% end %>
 	<% end %>
 </li>
+
+<script type="text/javascript">
+$(function () {
+  $('[data-toggle="tooltip"]').tooltip()
+})
+</script>
