--- a/app/views/submits/index.html.erb
+++ b/app/views/submits/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Grading list</h1>	
 
+<% if current_user.group %>
+
 <%= button_to 'Mark all I have graded as done', grades_mark_all_done_path, class: 'pull-right btn', data: { confirm:'Are you sure? You will not be able to edit anymore.' } %>
 <h2>To be graded</h2>
 
@@ -42,3 +44,12 @@
 	</tr>
 	<% end %>
 </table>
+
+<% else %>
+
+<div class="jumbotron">
+  <h1>You</h1>
+  <p>Are not in a group.</p>
+</div>
+
+<% end %>
