--- a/app/views/students/_tabs.html.erb
+++ b/app/views/students/_tabs.html.erb
@@ -1,11 +1,6 @@
 <ul class="nav nav-tabs" style="margin-top:1em;">
-	<% @groups.each_with_index do |group,i| %>
-	<li <%= 'class="active"'.html_safe if params[:group] == group.slug %>>
-		<%= link_to "#{group.name} (#{@group_counts[group.id]})", students_path(group:group.slug) %>
-	</li>
-	<% end if @groups %>
-	<li <%= 'class="active"'.html_safe if action_name == 'list_other' %>>
-		<%= link_to "Other (#{@groupless_count})", students_in_other_path %>
+	<li <%= 'class="active"'.html_safe if action_name == 'index' %>>
+		<%= link_to "Active (#{@active_count})", students_path %>
 	</li>
 	<li <%= 'class="active"'.html_safe if action_name == 'list_inactive' %>>
 		<%= link_to "Inactive (#{@inactive_count})", students_in_inactive_path %>
