--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -105,7 +105,7 @@
 				</div>
 			</div>
 
-			<% if current_user.is_admin? %>
+			<% if current_user.admin? %>
 			<div class="form-group">
 				<label for="inputPassword3" class="col-sm-3 control-label">Calculated grade</label>
 				<div class="col-sm-9">
@@ -120,7 +120,7 @@
 
 			<div class="form-group">
 				<div class="col-sm-offset-3 col-sm-9">
-					<% if current_user.is_admin? || !@grade.done %>
+					<% if current_user.admin? || !@grade.done %>
 					<%= f.submit class: 'btn btn-primary form-control' %>
 					<% end %>
 				</div>
@@ -152,7 +152,7 @@
 	
 <% end %>
 
-<% if current_user.is_admin? and @submit %>
+<% if current_user.admin? and @submit %>
 <hr>
 <p>
 <%= link_to "Destroy submit completely", submit_path(id: @submit.id, referer: request.referer), method: :delete, data: { confirm: "Sure? This removes proof of student submitting. If you want to delete the grade, just empty text field and save the grade." }, class: 'btn btn-danger' if @submit %>
