--- a/app/views/page/mobile_home.html.erb
+++ b/app/views/page/mobile_home.html.erb
@@ -1,4 +1,4 @@
-<% if current_user.is_admin? %>
+<% if current_user.admin? %>
 <div class="list-group">
 	<a href="/hands/available" class="list-group-item">Set availability</a>
 	<a href="/hands" class="list-group-item">Hulplijst</a>
