--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,5 +2,5 @@
 
 <p>
     This course website is empty.
-    <% if @current_user.is_admin? %> You can bootstrap it by specifying a <%= link_to "git repository", config_git_path %> and importing it.<% end %>
+    <% if @current_user.admin? %> You can bootstrap it by specifying a <%= link_to "git repository", config_git_path %> and importing it.<% end %>
 </p>
