move student options to student view for speed

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,3 +1,24 @@
+<div class="pull-right">
+	<div class="btn-group">
+		<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			<span class="glyphicon glyphicon-flash"></span> <span class="caret"></span>
+		</button>
+		<ul class="dropdown-menu dropdown-menu-right">
+			<% @groups.each do |group| %>
+			<li <%= 'class=disabled' if @student.group_id == group.id %> ><%= link_to "Move to #{group.name}".html_safe, user_assign_group_path(user_id: @student.id, group_id: group.slug), method: :post %></li>
+			<% end if @groups %>
+			<li role="separator" class="divider"></li>
+			<% if @student.active? %>
+			<li><%= link_to 'Mark as inactive', user_path(id: @student.id, user: { active: false }), method: :put %></li>
+			<% else %>
+			<li><%= link_to 'Mark as active', user_path(id: @student.id, user: { active: true }), method: :put %></li>
+			<% end %>
+			<li role="separator" class="divider"></li>
+			<li><%= link_to 'Calculate final grade', user_calculate_final_grade_path(user_id: @student.id), method: :post %>
+			</ul>
+		</div>
+	</div>
+
 <h4><%= best_in_place @student, :name, as: :input, url: user_path(id: @student.id) %></h4>
 
 <p><span class="bar"><%= @student.attendance %></span></p>
