--- a/app/views/page/mobile_home.html.erb
+++ b/app/views/page/mobile_home.html.erb
@@ -2,6 +2,7 @@
 <div class="list-group">
 	<a href="/hands/available" class="list-group-item">Set availability</a>
 	<a href="/hands" class="list-group-item">Hulplijst</a>
-	<a href="/course/grades" class="list-group-item">Cijfers</a>
+	<a href="/students" class="list-group-item">Cijfers</a>
+	<a href="/admin/pages" class="list-group-item">Show pages</a>
 </div>
 <% end %>
