--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -14,7 +14,10 @@
 			<th>Group</th>
 		</tr>
 
-		<% users.each do |user| %>
+		<% users.each do |group, user_list|%>
+		<tr><td colspan="20"><%= group ? group.name : "Groupless" %></td></tr>
+
+		<% user_list.each do |user| %>
 		<tr>
 			<td>
 				<%= link_to user.name, student_path(user) %>
@@ -45,6 +48,8 @@
 			<td><%= user.group.name if user.group %></td>
 
 		</tr>
+		<% end %>
+
 		<% end %>
 
 	</table>
