--- a/app/views/students/_table.html.erb
+++ b/app/views/students/_table.html.erb
@@ -15,7 +15,7 @@
 		</tr>
 
 		<% users.each do |group, user_list|%>
-		<tr><td colspan="20"><%= group ? group.name : "Groupless" %></td></tr>
+		<tr><td colspan="20"><%= group ? "#{group.name} (#{user_list.size})" : "Groupless" %></td></tr>
 
 		<% user_list.each do |user| %>
 		<tr>
