--- a/app/views/grades/form.html.erb
+++ b/app/views/grades/form.html.erb
@@ -157,5 +157,7 @@
 <p>
 <%= link_to "Destroy submit completely", submit_path(id: @submit.id, referer: request.referer), method: :delete, data: { confirm: "Sure? This removes proof of student submitting. If you want to delete the grade, just empty text field and save the grade." }, class: 'btn btn-danger' if @submit %>
 <%= link_to_if @submit.grade, 'Put into grading list', students_touch_submit_path(submit_id: @submit.id), method: :post, data: { confirm: "Sure?" }, class: 'btn btn-danger' %>
+<%= link_to "Publish this grade now", submit_grade_path(submit_id: @submit.id, grade: { status: :published }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-default' %>
+<%= link_to "Re-open this grade", submit_grade_path(submit_id: @submit.id, grade: { status: :open }), method: :put, data: { confirm: "Sure?" }, class: 'btn btn-default' %>
 </p>
 <% end %>
