--- a/app/views/admin/stats.html.erb
+++ b/app/views/admin/stats.html.erb
@@ -1,3 +1,5 @@
 <p>Geregistreerd: <%= @geregistreerd %></p>
 <p>Gestart: <%= @gestart %></p>
+<p>Gestopt: <%= @gestopt %></p>
+<p>Bezig: <%= @bezig %>
 <p>Gehaald: <%= @gehaald %></p>
