--- a/app/views/layouts/_ama.html.erb
+++ b/app/views/layouts/_ama.html.erb
@@ -1,27 +1,9 @@
-<% if Settings.hands_allow %>
-<li role="presentation" class="dropdown-header" style="padding:5px 10px 0 12px;"><%= @assist_available.length %> staff are currently available.</li>
-<li role="presentation" style="margin-top:2px; background-color:#F8F8F8; display:flex;">
-<% @assist_available.each do |assist| %>
-<img src="<%= assist.avatar %>" style="width:70px; height:70px;" data-toggle="tooltip" data-placement="bottom" title="<%= assist.name.split[0] %>">
-<% end %>
-</li>
-<% else %>
-<li role="presentation" class="dropdown-header" style="padding:5px 10px 0 12px;">Ask us anything.</li>
-<% end %>
-<li class="dropdown-header"  style="padding:2px 10px 0 10px;">
-	<%= form_tag(profile_ask_path, method: :post) do %>
-		<textarea name="question" class="form-control" rows="3" required placeholder="What do you need help with?" style="margin-top:0.5em"></textarea>
-        <% if Settings.hands_allow %>
-        <input type="text" name="location" class="form-control" required placeholder="Where are you?" style="margin-top:0.5em">
-		<button type="submit" style="margin-top:0.5em; margin-bottom:0.5em" class="btn btn-default btn-sm btn-block btn-warning" name="how" value="hands">Ask for assistance</button>
-        <% else %>
-		<button type="submit" style="margin-top:0.5em; margin-bottom:0.5em" class="btn btn-default btn-sm btn-block btn-warning" name="how" value="email">Send question by e-mail</button>
-        <% end %>
-	<% end %>
-</li>
+<div id="ama">
+	Loading...
+</div>
 
 <script type="text/javascript">
 $(function () {
-  $('[data-toggle="tooltip"]').tooltip()
+	$.ajax('<%= ask_path %>');
 })
 </script>
