--- a/app/views/hands/available/index.html.erb
+++ b/app/views/hands/available/index.html.erb
@@ -1,12 +1,10 @@
 <p>You are currently <%= @available_string %> available for this course<%= " until #{@user.available.hour}" if @available%>.</p>
 
+<% (0..3).each do |n| %>
 <p>
-<%= button_to("Set availability until #{@option1.hour}h", { action: 'set', until: @option1 }, class: 'btn') %>
+<%= button_to("Set availability until #{(@option1 + n.hours).hour}h", { action: 'set', until: @option1 }, class: 'btn') %>
 </p>
-
-<p>
-<%= button_to("Set availability until #{@option2.hour}h", { action: 'set', until: @option2 }, class: 'btn') %>
-</p>
+<% end %>
 
 <p>
 <%= button_to("Set unavailable", { action: 'set', until: @optionU }, class: 'btn') %>
