--- a/app/views/ask/_form.html.erb
+++ b/app/views/ask/_form.html.erb
@@ -13,7 +13,7 @@
 		<textarea name="question" class="form-control" rows="3" required placeholder="What do you need help with?" style="margin-top:0.5em"></textarea>
         <% if Settings.hands_allow %>
         <input type="text" name="location" class="form-control" required placeholder="Where are you?" style="margin-top:0.5em">
-		<button type="submit" style="margin-top:0.5em; margin-bottom:0.5em" class="btn btn-default btn-sm btn-block btn-warning" name="how" value="hands">Ask for assistance</button>
+		<button id="ask-button" data-loading-text="Posting question..." type="submit" style="margin-top:0.5em; margin-bottom:0.5em" class="btn btn-default btn-sm btn-block btn-warning" name="how" value="hands">Ask for assistance</button>
         <% else %>
 		<button type="submit" style="margin-top:0.5em; margin-bottom:0.5em" class="btn btn-default btn-sm btn-block btn-warning" name="how" value="email">Send question by e-mail</button>
         <% end %>
@@ -23,5 +23,8 @@
 <script type="text/javascript">
 $(function () {
   $('[data-toggle="tooltip"]').tooltip()
+})
+$('#ask-button').on('click', function () {
+   var $btn = $(this).button('loading')
 })
 </script>
