--- a/app/views/submits/index.html.erb
+++ b/app/views/submits/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Grading list</h1>	
 
-<% if current_user.group %>
+<% if !Group.any? || current_user.group %>
 
 <%= button_to 'Mark all I have graded as done', submits_mark_all_done_path, class: 'pull-right btn', data: { confirm:'Are you sure? You will not be able to edit anymore.' } %>
 <h2>To be graded</h2>
