--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -5,22 +5,24 @@
 <li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-th"></i> Manage students'.html_safe, students_path %></li>
 <li><%= link_to '<i class="glyphicon glyphicon-tasks"></i> Grading list'.html_safe, submits_path %></li>
+<% if Settings.hands_allow %>
 <li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-time"></i> Set availability'.html_safe, hands_available_path %></li>
 <li><%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands list'.html_safe, hands_path %></li>
-<li class="divider"></li>
+<% end %>
 <% if Settings['links'] %>
+<li class="divider"></li>
 <% Settings['links'].each do |title, url| %>
 <li><%= link_to title.html_safe, url %></li>
 <% end %>
-<li class="divider"></li>
 <% end %>
+<li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path %></li>
 
 
 
 <% elsif current_user.assistant? %>
-<% if true #### EJ QLJW QLKWJ QKLWJ QKLWJ Q TODO %>
+<% if Settings.hands_allow %>
 <li><%= link_to '<i class="glyphicon glyphicon-time"></i> Set availability'.html_safe, hands_available_path %></li>
 <li><%= link_to '<i class="glyphicon glyphicon-hand-up"></i> Hands list'.html_safe, hands_path %></li>
 <li class="divider"></li>
@@ -31,8 +33,8 @@
 <% Settings['links'].each do |title, url| %>
 <li><%= link_to title.html_safe, url %></li>
 <% end %>
-<li class="divider"></li>
 <% end %>
+<li class="divider"></li>
 <li><%= link_to '<i class="glyphicon glyphicon-log-out"></i> Logout'.html_safe, profile_logout_path %></li>
 
 
