--- a/app/views/profile/grades.html.erb
+++ b/app/views/profile/grades.html.erb
@@ -20,7 +20,7 @@
 <%= simple_markdown(grade.comments) %>
 <p>
 	Graded by <%= grade.grader ? grade.grader.name.split[0] : "unknown?" %>
-	<% if grade.grader.avatar %>
+	<% if grade.grader && grade.grader.avatar %>
 	<br>
 	<img src="<%= grade.grader.avatar %>" style="width:70px; height:70px;" title="Picture of <%= grade.grader.name.split[0] %>">
 	<% end %>
