--- a/app/views/grade_mailer/new_mail.text.erb
+++ b/app/views/grade_mailer/new_mail.text.erb
@@ -1,9 +1,9 @@
 <%= @header %>
 
-Course: <%= @course_name %>
+Course : <%= @course_name %>
 Problem: <%= @grade_name %>
 <% if @grade %>
-The grade entered is: <%= translate_grade(@grade) %>
+Grade  : <%= translate_grade(@grade) %>
 <% end %>
 
 <%= @feedback %>
