--- a/app/views/admin/dump_grades.html.erb
+++ b/app/views/admin/dump_grades.html.erb
@@ -36,7 +36,7 @@
 			<% s.submits.each do |sub| %>
 			<tr>
 				<td></td>
-				<td><%= sub.pset.name %><br><small><%= sub.created_at %></small></td>
+				<td><%= sub.pset.name if sub.pset.present? %><br><small><%= sub.created_at %></small></td>
 				<% if sub.grade.present? %>
 				<td><%= sub.grade.grade %><br><small><%= sub.grade.updated_at %> (<%= sub.grade.grader %>)</small></td>
 				<td><%= sub.grade.scope %> / <%= sub.grade.correctness %> / <%= sub.grade.design %> / <%= sub.grade.style %></td>
