--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -17,7 +17,7 @@
 			<li><%= link_to 'Make assistant', user_path(id: @student.id, user: { role: :assistant }), method: :put %></li>
 			<li><%= link_to 'Make admin', user_path(id: @student.id, user: { role: :admin }), method: :put %></li>
 			<li role="separator" class="divider"></li>
-			<li><%= link_to 'Calculate final grade', user_calculate_final_grade_path(user_id: @student.id), method: :post %>
+			<li><%= link_to_if GradeTools.available?, 'Calculate final grade', user_calculate_final_grade_path(user_id: @student.id), method: :post %>
 			</ul>
 		</div>
 	</div>
