--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -34,7 +34,7 @@ all required files, you cannot submit.</p>
 		<td><%= file %></td>
 		<td><%= file_field_tag "f[#{file}]", :accept => File.extname(file) %></td>
 	</tr>
-	<% end %>
+	<% end   if files %>
 	<% end %>
 
 </table>
