simplify settings page

--- a/app/assets/stylesheets/strap.scss
+++ b/app/assets/stylesheets/strap.scss
@@ -198,6 +198,12 @@ section .embed
 	margin:2em -2em;
 }
 
+section hr
+{
+    margin-left:-2em; margin-right:-2em;
+    margin-top:2em; margin-bottom: 2em;
+}
+
 //section blockquote:first-child, section .embed:first-child
 //{
 //    margin-top:-2em;
