--- a/app/views/config/_webhook.html.erb
+++ b/app/views/config/_webhook.html.erb
@@ -1,4 +1,4 @@
-<h1>Connect webhook</h1>
+<h2><i class="glyphicon glyphicon-cloud-upload"></i> Connect webhook</h2>
 
 <p>
 	Webhook secret: <span id="secret"><%= @secret %></span>
