--- a/app/views/config/_git.html.erb
+++ b/app/views/config/_git.html.erb
@@ -1,5 +1,8 @@
-<h1>Git connection</h1>
+<h2><i class="glyphicon glyphicon-random"></i> Git connection</h2>
 
+<% if Settings.git_repo.present? %>
+<p><%= Settings.git_repo %> @ <%= Settings.git_branch %></p>
+<% else %>
 <p>
 	<%= form_tag(config_git_repo_path, class:'form') do %>
         <div class="form-group">
@@ -16,3 +19,4 @@
     	<%= submit_tag 'Clone', class:'btn btn-primary' %>
 	<% end %>
 </p>
+<% end %>
