--- a/app/views/config/index.html.erb
+++ b/app/views/config/index.html.erb
@@ -1,7 +1,9 @@
-<h1>Website configuration</h1>
+<%= render 'git' %>
 
-<p><%= link_to '<i class="glyphicon glyphicon-gift"></i> Manage Dropbox'.html_safe, config_dropbox_path, class:'btn btn-default btn-lg' if Dropbox.available? %></p>
+<hr>
 
-<p><%= link_to '<i class="glyphicon glyphicon-cloud"></i> Manage git repo'.html_safe, config_git_path, class:'btn btn-default btn-lg' %></p>
+<%= render 'dropbox' %>
 
-<p><%= link_to '<i class="glyphicon glyphicon-eye-close"></i> Connect webhook'.html_safe, config_webhook_path, class:'btn btn-default btn-lg' %></p>
+<hr>
+
+<%= render 'webhook' %>
