--- a/app/views/config/_webhook.html.erb
+++ b/app/views/config/_webhook.html.erb
@@ -1,11 +1,17 @@
-<h2><i class="glyphicon glyphicon-cloud-upload"></i> Connect webhook</h2>
+<h2 style="margin-bottom:1.5em">
+	<%= octicon "cloud-upload", height: 32, style: 'margin-right:0.25em;', class: 'dropcap'  %>
+	Webhook
+	<br>
+	<small>Download of course materials can be triggered by using this webhook.</small>
+</h2>
 
+<% if @secret.present? %>
 <p>
-	Webhook secret: <span id="secret"><%= @secret %></span>
+	URL: <%= api_reload_url %><br>
+	Secret: <span id="secret"><%= @secret %></span>
 </p>
-	
-<% if !@secret.present? %>
+<% else %>
 <p>
-	<%= link_to "Generate", config_generate_secret_path, method:'post', remote:true, class:'btn' %>
+	<%= link_to "Generate", config_generate_secret_path, method:'post', remote:true, class:'btn btn-primary' %>
 </p>
 <% end %>
