layout for next year, first edition

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,10 +13,10 @@
 
 $link-color: #52B15A;
 
-$navbar-default-bg: #469D4F;
-$navbar-default-color: #F0F7FB;
-$navbar-default-link-color: #3a2e28;
-$navbar-default-link-active-color: #F0F7FB;
+$navbar-default-bg: #FCFCFC;
+$navbar-default-color: #918291;
+$navbar-default-link-color: #514454;
+$navbar-default-link-active-color: #514454;
 $navbar-default-border: transparent;
 
 $component-active-bg: #52B15A;
