--- a/app/assets/stylesheets/fonts.scss
+++ b/app/assets/stylesheets/fonts.scss
@@ -11,15 +11,10 @@
 	font-size:30px;
 }
 
-h2
-{
-    margin-bottom:1em;
-}
-
 #content h1
 {
 	padding-bottom:9px;
-	border-bottom: 1px solid #cacaca;
+	sborder-bottom: 1px solid #cacaca;
 }
 
 #content table
